hphp/test/zend/bad/ext-spl/SplFixedArray_fromarray_non_indexes.php
<?php
$array = SplFixedArray::fromArray(array(1 => 1, 
										2 => '2',
										3 => false),
									false);
var_dump($array);
?>